Restructuing with maven revision feature
Preserving the maven revision feature from the previous commit,
but perform a bit more restructuring the hierarchy.

--- a/functions/common/aws-s3-common/pom.xml
+++ b/functions/common/aws-s3-common/pom.xml
@@ -4,8 +4,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>java-functions-common-parent</artifactId>
+        <artifactId>spring-functions-parent</artifactId>
         <version>${revision}</version>
+        <relativePath>../../spring-functions-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>aws-s3-common</artifactId>
