--- a/functions/function-dependencies/pom.xml
+++ b/functions/function-dependencies/pom.xml
@@ -8,6 +8,7 @@
         <groupId>org.springframework.cloud.fn</groupId>
         <artifactId>java-functions-parent</artifactId>
         <version>${revision}</version>
+        <relativePath>..</relativePath>
     </parent>
 
     <artifactId>function-dependencies</artifactId>
