--- a/functions/common/cdc-debezium-boot-starter/pom.xml
+++ b/functions/common/cdc-debezium-boot-starter/pom.xml
@@ -5,8 +5,9 @@
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>java-functions-common-parent</artifactId>
+		<artifactId>spring-functions-parent</artifactId>
 		<version>${revision}</version>
+		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
 	<artifactId>cdc-debezium-boot-starter</artifactId>
