--- a/functions/consumer/rabbit-consumer/pom.xml
+++ b/functions/consumer/rabbit-consumer/pom.xml
@@ -4,8 +4,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>java-functions-consumer-parent</artifactId>
+        <artifactId>spring-functions-parent</artifactId>
         <version>${revision}</version>
+        <relativePath>../../spring-functions-parent</relativePath>
     </parent>
 
     <artifactId>rabbit-consumer</artifactId>
