--- a/functions/function/task-launch-request-function/pom.xml
+++ b/functions/function/task-launch-request-function/pom.xml
@@ -6,8 +6,9 @@
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<artifactId>java-functions-function-parent</artifactId>
+		<artifactId>spring-functions-parent</artifactId>
 		<version>${revision}</version>
+		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
 	<artifactId>task-launch-request-function</artifactId>
