--- a/applications/stream-applications-core/common/stream-applications-micrometer-common/pom.xml
+++ b/applications/stream-applications-core/common/stream-applications-micrometer-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>stream-applications-core</artifactId>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../..</relativePath>
     </parent>
     <properties>
