--- a/release-train/stream-applications-build/pom.xml
+++ b/release-train/stream-applications-build/pom.xml
@@ -10,7 +10,7 @@
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
         <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../stream-applications-core</relativePath>
+        <relativePath>../../applications/stream-applications-core/pom.xml</relativePath>
     </parent>
 
     <modules>
