--- a/release-train/stream-applications-release-train/pom.xml
+++ b/release-train/stream-applications-release-train/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>stream-applications-build</artifactId>
-    <version>2020.0.0-SNAPSHOT</version>
+    <artifactId>stream-applications-release-train</artifactId>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -19,6 +19,7 @@
     </modules>
 
     <properties>
+        <revision>2020.0.0-SNAPSHOT</revision>
         <apps.version>3.0.0-SNAPSHOT</apps.version>
         <cdc-debezium-source.version>${apps.version}</cdc-debezium-source.version>
         <file-source.version>${apps.version}</file-source.version>
@@ -78,6 +79,36 @@
         <transform-processor.version>${apps.version}</transform-processor.version>
         <twitter-trend-processor.version>${apps.version}</twitter-trend-processor.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.2.5</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <profiles>
         <profile>
