--- a/release-train/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/release-train/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -6,8 +6,8 @@
 	<description>Stream Apps Docs</description>
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
-		<artifactId>stream-applications-build</artifactId>
-		<version>2020.0.0-SNAPSHOT</version>
+		<artifactId>stream-applications-release-train</artifactId>
+		<version>${revision}</version>
 	</parent>
 
 	<properties>
