--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -26,6 +26,8 @@
         <spring-cloud-stream.version>3.0.9.BUILD-SNAPSHOT</spring-cloud-stream.version>
         <spring-cloud-dataflow-apps-generator-plugin.version>1.0.0-M1</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.0.0-M1</spring-cloud-dataflow-apps-docs-plugin.version>
+        <java-cfenv-boot.version>2.1.2.RELEASE</java-cfenv-boot.version>
+        <prometheus-rsocket.version>1.2.1</prometheus-rsocket.version>
     </properties>
 
     <modules>
@@ -164,7 +166,7 @@
                                         <dependency>
                                             <groupId>org.springframework.cloud</groupId>
                                             <artifactId>spring-cloud-function-dependencies</artifactId>
-                                            <version>${spring-cloud-function-dependencies.version}</version>
+                                            <version>${spring-cloud-function.version}</version>
                                         </dependency>
                                         <dependency>
                                             <groupId>org.springframework.cloud</groupId>
