--- a/applications/source/rabbit-source/pom.xml
+++ b/applications/source/rabbit-source/pom.xml
@@ -14,9 +14,7 @@
         <version>3.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
-    <properties>
-        <test-containers-version>1.14.2</test-containers-version>
-    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,13 +39,13 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>${test-containers-version}</version>
+            <version>${test-containers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>rabbitmq</artifactId>
-            <version>${test-containers-version}</version>
+            <version>${test-containers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
