Add zeromq consumer
* add zeromq consumer configuration, module and documentation

* implement requested changes

* Update functions/consumer/zeromq-consumer/README.adoc

Co-authored-by: Artem Bilan <abilan@vmware.com>

* implement requested changes

* Update functions/consumer/zeromq-consumer/README.adoc

Co-authored-by: Artem Bilan <abilan@vmware.com>

* implement requested changes

Co-authored-by: Artem Bilan <abilan@vmware.com>

--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -54,6 +54,7 @@
 		<module>consumer/twitter-consumer</module>
 		<module>consumer/wavefront-consumer</module>
 		<module>consumer/rsocket-consumer</module>
+		<module>consumer/zeromq-consumer</module>
 
 		<module>function/aggregator-function</module>
 		<module>function/filter-function</module>
