--- a/functions/function-dependencies/pom.xml
+++ b/functions/function-dependencies/pom.xml
@@ -203,6 +203,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud.fn</groupId>
+                <artifactId>zeromq-consumer</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud.fn</groupId>
                 <artifactId>aggregator-function</artifactId>
                 <version>${project.version}</version>
             </dependency>
