implement zeromq sink application

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -34,5 +34,6 @@
         <module>pgcopy-sink</module>
         <module>rsocket-sink</module>
         <module>elasticsearch-sink</module>
+        <module>zeromq-sink</module>
     </modules>
 </project>
