--- a/applications/stream-applications-core/stream-applications-micrometer-common/pom.xml
+++ b/applications/stream-applications-core/stream-applications-micrometer-common/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>micrometer-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-influx</artifactId>
             <scope>test</scope>
