--- a/functions/consumer/zeromq-consumer/pom.xml
+++ b/functions/consumer/zeromq-consumer/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
         <artifactId>spring-functions-parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../../spring-functions-parent</relativePath>
     </parent>
 
     <artifactId>zeromq-consumer</artifactId>
     <name>zeromq-consumer</name>
-    <description>ZeroMQ consumber</description>
+    <description>ZeroMQ consumer</description>
 
     <dependencies>
 
