--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -17,14 +17,11 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-boot.version>2.4.0-SNAPSHOT</spring-boot.version>
-		<spring-cloud-function.version>3.1.0-M2</spring-cloud-function.version>
+		<spring-cloud-function.version>3.1.0-SNAPSHOT</spring-cloud-function.version>
 		<spring-cloud-fn.version>${project.version}</spring-cloud-fn.version>
 		<spring-integration-dependencies.version>5.4.0-SNAPSHOT</spring-integration-dependencies.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
-<<<<<<< HEAD
 	<dependencies>
 
 		<!-- Spring Boot dependencies -->
@@ -80,6 +77,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.awaitility</groupId>
 			<artifactId>awaitility</artifactId>
 			<scope>test</scope>
@@ -90,39 +93,5 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-
 	</dependencies>
-
-
-
-
-=======
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.integration</groupId>
-				<artifactId>spring-integration-bom</artifactId>
-				<version>${spring-integration-dependencies.version}</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-parent</artifactId>
-				<version>${spring-boot.version}</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-function-dependencies</artifactId>
-				<version>${spring-cloud-function.version}</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
-		</dependencies>
-
-	</dependencyManagement>
->>>>>>> Add zeromq source application
 </project>
