--- a/applications/stream-applications-core/stream-applications-micrometer-common/pom.xml
+++ b/applications/stream-applications-core/stream-applications-micrometer-common/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>stream-applications-core</artifactId>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <version>${revision}</version>
-        <relativePath>../..</relativePath>
+        <relativePath>..</relativePath>
     </parent>
     <properties>
         <jmockit.version>1.49</jmockit.version>
