--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<source>1.8</source>
 					<quiet>true</quiet>
 				</configuration>
 			</plugin>
@@ -105,7 +106,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
 					<includes>
 						<include>**/*Tests.java</include>
